# AI_Legal_Aid_Triage_Agent

./: README.md  file.py  folder_structure.md  guide.txt  requirements.txt
Working/: Agents_Description.md  Data_Structures.md  Loops_and_Logic.md  Pipeline_Flow.md  System_Architecture.md  TECHNICAL_ARCHITECTURE.md
backend/: .env.example  check_imports.py  debug_vector.py  pyproject.toml  requirements.txt  schema.sql  test_agent_nodes.py  test_api_connection.py  test_output.txt  test_result.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
backend/app/agents/: __init__.py  clarification_agent.py  classifier_agent.py  intake_agent.py  memory_agent.py  response_agent.py  retriever_agent.py  safety_agent.py
backend/app/api/: __init__.py  auth.py  chat.py  health.py  sessions.py
backend/app/db/: __init__.py  models.py  supabase.py  vector.py
backend/app/llm/: __init__.py  embeddings.py  router.py
backend/app/memory/: __init__.py  long_term.py  short_term.py  summarizer.py
backend/app/rag/: __init__.py  chunker.py  embedder.py  generator.py  loader.py  pipeline.py  prompt.py  retriever.py
backend/app/utils/: __init__.py  confidence.py  guardrails.py  logger.py
backend/scripts/: build_embeddings.py  ingest_documents.py  setup_database.py
backend/tests/: test_agent.py
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
landing_page/: components.json  index.html  package-lock.json  package.json  (+1 more)
(+48 files in other folders)
