[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.11.11",
    "email-validator>=2.3.0",
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "huggingface-hub==0.26.5",
    "langchain==0.3.12",
    "langchain-community==0.3.12",
    "langchain-core==0.3.25",
    "langchain-google-genai==2.0.5",
    "langchain-openai==0.2.10",
    "langgraph==0.2.53",
    "numpy>=1.26.4,<2.0.0 ; python_full_version < '3.12'",
    "numpy>=1.26.4,<3.0.0 ; python_full_version >= '3.12'",
    "passlib[bcrypt]==1.7.4",
    "postgrest==0.19.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pypdf==5.1.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.19",
    "sentence-transformers>=5.2.2",
    "supabase==2.11.0",
    "tiktoken==0.8.0",
    "torch>=2.10.0",
    "uvicorn[standard]==0.32.1",
]
